--- a/scss/_navFooter.scss
+++ b/scss/_navFooter.scss
@@ -1,17 +1,46 @@
 //NavBar
 .bg-nav {
   background-color: map-get($map: $paleta, $key: "cuatro");
-  padding: 10px;
+  padding: 5px;
   ul li {
     margin-right: 20px;
     background-color: map-get($map: $paleta, $key: "cuatro");
   }
   a {
-    @include texto(1rem, map-get($map: $paleta, $key: "siete"), bolder);
+    @include texto(1rem, map-get($map: $paleta, $key: "nueve"), bolder);
     text-decoration: none;
-    padding: 10px;
+    font-size: 1.2rem;
     &:hover {
       color: map-get($map: $paleta, $key: "seis");
+    }
+    @media (min-width: 768px) {
+      font-size: 1.5rem;
+    }
+    @media (min-width: 1024px) {
+      font-size: 1.5rem;
+    }
+    position: sticky;
+  }
+}
+
+.navbar-nav .nav-link {
+  display: flex;
+  align-items: center;
+  font-size: 1.5rem;
+}
+
+
+.navbar-toggler-icon {
+  img {
+    width: 100%;
+  }
+}
+
+.navbar-brand {
+  img {
+    width: 60%;
+    @media (min-width: 1024px) {
+      width: 70%;
     }
   }
 }
@@ -21,36 +50,12 @@
 }
 
 .imgNav {
-  width: 4%;
-}
-
-nav img {
-  width: 50%;
-}
-
-#nav1 {
-  height: 15vh;
-}
-
-@media (min-width: 768px) {
-  .bg-nav {
-    background-color: map-get($map: $paleta, $key: "cuatro");
-    ul li a {
-      font-size: 1rem;
-    }
+  width: 8%;
+  margin: 4px;
+  @media (min-width: 768px) {
+    width: 5%;
   }
-}
-
-@media (min-width: 1024px) {
-  nav img {
-    width: 65%;
-  }
-
-  #nav1 li a {
-    font-size: 1.5rem;
-  }
-
-  .imgNav {
+  @media (min-width: 1024px) {
     width: 60%;
   }
 }
@@ -58,41 +63,39 @@ nav img {
 //Footer
 
 .footer {
-  background-color: map-get($map: $paleta, $key: "cuatro");
+  background-color: white;
   margin-left: 10px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  @media (min-width: 768px) {
+    @include flex(row, center);
+    justify-content: space-evenly;
+  }
   div {
     margin-bottom: 10px;
   }
   h3 {
-    color: map-get($map: $paleta, $key: "seis");
-    font-size: 0.8rem;
+    color: map-get($map: $paleta, $key: "uno");
+    font-size: 1rem;
+    margin-bottom: 2px;
+    @media (min-width: 768px) {
+      font-size: 1.2rem;
+    }
   }
 }
 
 .footer__image {
   width: 50px;
+  @media (min-width: 768px) {
+    width: 140px;
+  }
 }
 .footer__icon {
   width: 20px;
-  margin-left: 6px;
+  margin-left: 4px;
   padding-top: -20px;
-}
-
-@media (min-width: 768px) {
-  .footer {
-    @include flex(row, center);
-    justify-content: space-evenly;
-    h3 {
-      font-size: 1.2rem;
-    }
-  }
-  .footer__image {
-    width: 140px;
-  }
-  .footer__icon {
+  @media (min-width: 768px) {
     width: 30px;
   }
 }
