--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Cabin&family=Josefin+Sans:wght@300&display=swap");
 .btn-submit {
   border-radius: 0.25rem;
@@ -88,6 +89,9 @@ body {
 #nav1 {
   grid-area: nav;
   height: 17vh; }
+  @media (min-width: 1024px) {
+    #nav1 {
+      padding: 25px; } }
 
 #header {
   grid-area: header;
@@ -104,8 +108,7 @@ body {
   grid-area: aside; }
 
 #footer {
-  grid-area: footer;
-  padding-top: 10px; }
+  grid-area: footer; }
 
 @media (min-width: 768px) {
   .contenedor {
@@ -157,9 +160,12 @@ body {
 
 .navbar-brand img {
   width: 60%; }
-  @media (min-width: 1024px) {
+  @media (min-width: 768px) {
     .navbar-brand img {
       width: 70%; } }
+  @media (min-width: 1024px) {
+    .navbar-brand img {
+      width: 80%; } }
 
 #navbarSupportedContent {
   z-index: 1; }
@@ -176,31 +182,27 @@ body {
 
 .footer {
   background-color: white;
-  margin-left: 10px;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start; }
-  @media (min-width: 768px) {
-    .footer {
-      display: flex;
-      flex-direction: row;
-      text-align: center;
-      justify-content: space-evenly; } }
-  .footer div {
-    margin-bottom: 10px; }
+  flex-direction: row;
+  text-align: center;
+  justify-content: space-evenly;
+  padding-top: 4px; }
   .footer h3 {
     color: #da7294;
-    font-size: 1rem;
-    margin-bottom: 2px; }
+    font-size: 0.8rem;
+    margin-bottom: 1px; }
     @media (min-width: 768px) {
       .footer h3 {
         font-size: 1.2rem; } }
+    @media (min-width: 1024px) {
+      .footer h3 {
+        font-size: 1.4rem; } }
 
 .footer__image {
   width: 50px; }
   @media (min-width: 768px) {
     .footer__image {
-      width: 140px; } }
+      width: 100px; } }
 
 .footer__icon {
   width: 20px;
@@ -236,11 +238,19 @@ body {
 
 .encabezadoCarousel {
   width: 80%;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: bolder;
   margin-top: 10px;
   margin-bottom: 0px;
   background-color: #d9b6bd; }
+  @media (min-width: 768px) {
+    .encabezadoCarousel {
+      font-size: 1.8rem;
+      width: 78%; } }
+  @media (min-width: 768px) {
+    .encabezadoCarousel {
+      font-size: 2rem;
+      width: 80%; } }
 
 .carousel {
   width: 80%;
@@ -248,15 +258,11 @@ body {
 
 .carousel-inner img {
   width: 260px;
-  height: 100px; }
+  height: 110px; }
   @media (min-width: 768px) {
     .carousel-inner img {
       width: 600px;
-      height: 200px; } }
-  @media (min-width: 1024px) {
-    .carousel-inner img {
-      width: 600px;
-      height: 200px; } }
+      height: 240px; } }
 
 .nav2 {
   background-color: #ffd3ca;
@@ -284,18 +290,43 @@ a {
 
 .estampadosNav2 {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   text-align: center;
+  justify-content: space-evenly;
   align-items: flex-start;
-  margin: 0px; }
+  height: 20vh; }
   .estampadosNav2 label {
     font-size: 1.2rem; }
   .estampadosNav2 h3 {
     font-size: 1.2rem;
     padding-top: 10px; }
+  .estampadosNav2 div {
+    padding: 4px; }
+  @media (min-width: 768px) {
+    .estampadosNav2 {
+      justify-content: space-evenly;
+      align-items: flex-start; }
+      .estampadosNav2 div {
+        padding-right: 4px; } }
   @media (min-width: 1024px) {
-    .estampadosNav2 span {
-      padding-top: 6px; } }
+    .estampadosNav2 {
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      justify-content: flex-start; }
+      .estampadosNav2 span {
+        padding-top: 6px; } }
+
+.checkboxDiseños {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: flex-start; }
+  @media (min-width: 1024px) {
+    .checkboxDiseños {
+      display: flex;
+      flex-direction: column;
+      text-align: center; } }
 
 #aside {
   display: flex;
@@ -314,16 +345,18 @@ a {
       text-align: center; } }
   #aside figcaption {
     font-size: 1rem;
-    font-weight: bolder; }
+    font-weight: bolder;
+    margin-top: 6px;
+    margin-bottom: 6px; }
 
 img {
   width: 20%; }
   @media (min-width: 768px) {
     img {
-      width: 30%; } }
+      width: 35%; } }
   @media (min-width: 1024px) {
     img {
-      width: 70%; } }
+      width: 65%; } }
 
 .row {
   justify-content: center; }
@@ -331,7 +364,7 @@ img {
 .card {
   align-items: center;
   width: 90%;
-  background-color: antiquewhite;
+  background-color: #fcd7cb;
   margin: 20px; }
   @media (min-width: 768px) {
     .card {
@@ -341,10 +374,18 @@ img {
     .card {
       width: 100%; } }
 
-.container-fluid h3 {
-  font-size: 0.8rem;
-  color: #ff8173;
-  font-style: italic; }
+.container-fluid {
+  margin-left: 20px; }
+  .container-fluid h3 {
+    font-size: 1rem;
+    color: #ff8173;
+    font-style: italic;
+    margin-top: -6px;
+    margin-bottom: -10px; }
+    @media (min-width: 768px) {
+      .container-fluid h3 {
+        font-size: 1.2rem;
+        margin-bottom: 10px; } }
 
 .card-body {
   display: flex;
@@ -413,11 +454,15 @@ img {
 
 span p {
   background-color: #ff8173;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   font-weight: bolder;
   color: white;
   text-align: center;
-  margin: 20px; }
+  margin: 20px;
+  padding: 10px; }
+  @media (min-width: 1024px) {
+    span p {
+      margin: 10px; } }
 
 .card-title {
   text-align: center;
@@ -445,8 +490,15 @@ article {
   width: 100%;
   height: 100%; }
 
+#imgFormulario {
+  background-color: #d9b6bd;
+  padding-top: 6px;
+  padding-bottom: 6px; }
+  #imgFormulario img {
+    padding: 0px; }
+
 .error404 {
-  padding: 20px 20px;
+  padding: 50px 20px;
   display: flex;
   flex-direction: column;
   text-align: center;
