--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -32,12 +32,19 @@ h2{
 
 .encabezadoCarousel {
   width: 80%;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: bolder;
   margin-top: 10px;
   margin-bottom: 0px;
   background-color: map-get($map: $paleta, $key: "cinco");
-
+  @media (min-width: 768px) {
+    font-size: 1.8rem;
+    width: 78%;
+  }
+  @media (min-width: 768px) {
+    font-size: 2rem;
+    width: 80%;
+  }
 }
 
 .carousel {
@@ -47,14 +54,13 @@ h2{
 
 .carousel-inner img {
   width: 260px;
-  height: 100px;
+  height: 110px;
   @media (min-width: 768px) {
     width: 600px;
-    height: 200px;  }
-  @media (min-width: 1024px) {
-    width: 600px;
-    height: 200px;  }
+    height: 240px;  
+  }
 }
+
 
 //Page "Productos"
 .nav2 {
@@ -86,9 +92,9 @@ a {
 }
 
 .estampadosNav2{
-  @include flex(column, center);
+  @include flex(row, center);
+  justify-content: space-evenly;
   align-items: flex-start;
-  margin: 0px;
   label{
     font-size: 1.2rem;
   }
@@ -96,10 +102,28 @@ a {
     font-size: 1.2rem;
     padding-top: 10px;
   }
+  height: 20vh;
+  div{
+    padding: 4px;
+  }
+  @media (min-width: 768px) {
+    justify-content: space-evenly;
+    align-items: flex-start;
+}
   @media (min-width: 1024px) {
+    @include flex(column, center);
+    justify-content: flex-start;
     span{
     padding-top: 6px;
 }
+}
+}
+
+.checkboxDiseños{
+  @include flex(column, center);
+  align-items: flex-start;
+  @media (min-width: 1024px) {
+    @include flex(column, center);
 }
 }
 
@@ -115,16 +139,18 @@ a {
   figcaption {
     font-size: 1rem;
     font-weight: bolder;
+    margin-top: 6px;
+    margin-bottom: 6px;
   }
 }
 
 img {
   width: 20%;
   @media (min-width: 768px) {
-    width: 30%;
+    width: 35%;
   }
   @media (min-width: 1024px) {
-    width: 70%;
+    width: 65%;
   }
 }
 
@@ -146,10 +172,17 @@ img {
   }
 }
 .container-fluid {
+  margin-left: 20px;
   h3 {
-    font-size: 0.8rem;
+    font-size: 1rem;
     color: map-get($map: $paleta, $key: "seis");
     font-style: italic;
+    margin-top: -6px;
+    margin-bottom: -10px;
+    @media (min-width: 768px) {
+      font-size: 1.2rem;
+      margin-bottom: 10px;
+    }
   }
 }
 
@@ -226,11 +259,15 @@ img {
 
 span p{
     background-color: map-get($map: $paleta, $key: "seis");
-      font-size: 1.5rem;
+      font-size: 1.4rem;
       font-weight: bolder;
       color: map-get($map: $paleta, $key: "nueve");
   text-align: center;
   margin: 20px;
+  padding: 10px;
+  @media (min-width: 1024px) {
+    margin: 10px;
+  }
     }
 
 
@@ -253,7 +290,6 @@ margin: 20px;
   background-color: map-get($map: $paleta, $key: "cinco");
 }
 
-
 article {
   justify-content: center;
   h2 {
@@ -264,6 +300,15 @@ article {
 .img-thumbnail {
   width: 100%;
   height: 100%;
+}
+
+#imgFormulario{
+  background-color: map-get($map: $paleta, $key: "cinco");
+  padding-top: 6px;
+  padding-bottom: 6px;
+  img{
+padding: 0px;
+  }
 }
 
 //Page "Error 404"
@@ -277,7 +322,7 @@ article {
       font-size: 2.5rem;
     }
   }
-  padding: 20px 20px;
+  padding: 50px 20px;
   @include flex(column, center);
   align-items: center;
   img {
