--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Cabin&family=Josefin+Sans:wght@300&display=swap");
 
-//Aplicando SASS para Desafío Entregable 7
 @mixin texto($font-size, $color, $font-weight) {
   font-size: $font-size;
   color: $color;
@@ -22,14 +21,14 @@ $paleta: (
   "seis": rgb(255, 129, 115),
   "siete": rgb(243, 164, 162),
   "ocho": rgb(252, 215, 203),
-  "nueve": white
+  "nueve": white,
 );
 
 .btn-submit {
   @extend .btn;
   border-radius: 0.25rem;
   border: none;
-  margin: 10px;
+  margin: 0.625rem;
   padding: 0.5rem 1.75rem;
   &:hover {
     background: green;
@@ -48,7 +47,7 @@ $paleta: (
   @extend .btn;
   border-radius: 0.25rem;
   border: none;
-  margin: 10px;
+  margin: 0.625rem;
   padding: 0.5rem 1.75rem;
   &:hover {
     background: red;
@@ -56,13 +55,12 @@ $paleta: (
     cursor: pointer;
   }
 }
-//Comienzan clases generales
 
 * {
   font-size: 85%;
   margin: 0;
-  padding-left: 0px;
-  padding-right: 0px;
+  padding-left: 0;
+  padding-right: 0;
   font-family: "Josefin Sans", sans-serif;
   font-size: 1rem;
 }
@@ -81,7 +79,7 @@ h3 {
 
 h1 {
   font-size: 2rem;
-  padding-top: 10px;
+  padding-top: 0.625rem;
   @media (min-width: 768px) {
     font-size: 2.5rem;
   }
@@ -114,14 +112,13 @@ body {
   font-weight: bold;
   box-sizing: border-box;
   background-color: map-get($map: $paleta, $key: "dos");
-  padding: 10px 10px;
+  padding: 0.625rem 0.625rem;
   @media (min-width: 768px) {
-      font-size: 1.6rem;
-      padding-bottom: 40px;
-    }
+    font-size: 1.6rem;
+    padding-bottom: 2.5rem;
+  }
 }
 
-//Estructurando las pages con GRIDS
 .contenedor {
   display: grid;
   grid-template-columns: 1fr;
@@ -136,10 +133,9 @@ body {
 }
 #nav1 {
   grid-area: nav;
-  height: 17vh;
   @media (min-width: 1024px) {
-  padding: 25px;
-}
+    padding: 1.563rem;
+  }
 }
 
 #header {
@@ -153,7 +149,10 @@ body {
 
 #productos {
   grid-area: productos;
-  padding-bottom: 10px;
+  padding-bottom: 0.625rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #aside {
@@ -176,14 +175,6 @@ body {
       "aside aside"
       "footer footer";
   }
-
-  .sobreMi__article--fotoMarian {
-    width: 300px;
-  }
-
-  .carousel-inner img {
-    width: 80%;
-  }
 }
 
 @media (min-width: 1024px) {
@@ -195,8 +186,5 @@ body {
       "nav nav nav"
       "filtros productos aside"
       "footer footer footer";
-  }
-  .carousel-inner img {
-    width: 70%;
   }
 }
