--- a/scss/_navFooter.scss
+++ b/scss/_navFooter.scss
@@ -1,9 +1,9 @@
 //NavBar
 .bg-nav {
   background-color: map-get($map: $paleta, $key: "cuatro");
-  padding: 5px;
+  padding: 0.313rem;
   ul li {
-    margin-right: 20px;
+    margin-right: 1.25rem;
     background-color: map-get($map: $paleta, $key: "cuatro");
   }
   a {
@@ -19,14 +19,17 @@
     @media (min-width: 1024px) {
       font-size: 1.5rem;
     }
-    position: sticky;
   }
 }
 
 .navbar-nav .nav-link {
   display: flex;
   align-items: center;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
+  font-weight: bolder;
+  @media (min-width: 1024px) {
+    font-size: 1.5rem;
+  }
 }
 
 .navbar-toggler-icon {
@@ -39,10 +42,10 @@
   img {
     width: 60%;
     @media (min-width: 768px) {
-      width:70%;
+      width: 80%;
     }
     @media (min-width: 1024px) {
-      width: 80%;
+      width: 85%;
     }
   }
 }
@@ -53,7 +56,7 @@
 
 .imgNav {
   width: 8%;
-  margin: 4px;
+  margin: 0.25rem;
   @media (min-width: 768px) {
     width: 5%;
   }
@@ -68,11 +71,11 @@
   background-color: map-get($map: $paleta, $key: "nueve");
   @include flex(row, center);
   justify-content: space-evenly;
-  padding-top: 4px;
+  padding-top: 0.25rem;
   h3 {
     color: map-get($map: $paleta, $key: "uno");
     font-size: 0.8rem;
-    margin-bottom: 1px;
+    margin-bottom: 0.063rem;
     @media (min-width: 768px) {
       font-size: 1.2rem;
     }
@@ -82,16 +85,16 @@
   }
 }
 .footer__image {
-  width: 50px;
+  width: 3.125rem;
   @media (min-width: 768px) {
-    width: 100px;
+    width: 6.25rem;
   }
 }
 .footer__icon {
-  width: 20px;
-  margin-left: 4px;
-  padding-top: -20px;
+  width: 1.25rem;
+  margin-left: 0.25rem;
+  padding-top: -1.25rem;
   @media (min-width: 768px) {
-    width: 30px;
+    width: 1.875rem;
   }
 }
