--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@
   padding-left: 0;
   padding-right: 0;
   font-family: "Josefin Sans", sans-serif;
-  font-size: 1rem; }
+  font-size: 1.2rem; }
 
 html {
   font-size: 85%; }
@@ -100,11 +100,7 @@ body {
   grid-area: filtros; }
 
 #productos {
-  grid-area: productos;
-  padding-bottom: 0.625rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center; }
+  grid-area: productos; }
 
 #aside {
   grid-area: aside; }
@@ -188,8 +184,8 @@ body {
   padding-top: 0.25rem; }
   .footer h3 {
     color: #da7294;
-    font-size: 0.8rem;
-    margin-bottom: 0.063rem; }
+    font-size: 0.9rem;
+    margin-bottom: 0.3rem; }
     @media (min-width: 768px) {
       .footer h3 {
         font-size: 1.2rem; } }
@@ -198,10 +194,10 @@ body {
         font-size: 1.4rem; } }
 
 .footer__image {
-  width: 3.125rem; }
+  width: 5rem; }
   @media (min-width: 768px) {
     .footer__image {
-      width: 6.25rem; } }
+      width: 8rem; } }
 
 .footer__icon {
   width: 1.25rem;
@@ -212,76 +208,16 @@ body {
       width: 1.875rem; } }
 
 .carousel-index {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
   padding: 1.25rem; }
   .carousel-index img {
     width: 100%; }
 
-.galeria_disenios {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  align-items: center; }
-  .galeria_disenios a {
-    font-size: 1.5rem;
-    text-decoration: none;
-    font-weight: bolder; }
-    .galeria_disenios a:hover {
-      color: #ff8173; }
-  .galeria_disenios h2 {
-    padding-top: 0.625rem;
-    margin-bottom: -0.125rem; }
-
-.encabezadoCarousel {
-  width: 80%;
-  font-size: 1.4rem;
-  font-weight: bolder;
-  margin-top: 0.625rem;
-  margin-bottom: 0;
-  background-color: #d9b6bd; }
-  @media (min-width: 768px) {
-    .encabezadoCarousel {
-      font-size: 1.8rem;
-      width: 67%; } }
-  @media (min-width: 1024px) {
-    .encabezadoCarousel {
-      font-size: 2rem;
-      width: 72%; } }
-
-.carousel {
-  width: 80%;
-  margin-bottom: 1.25rem; }
-
-.carousel-inner img {
-  width: 16.25rem;
-  height: 6.875rem; }
-  @media (min-width: 768px) {
-    .carousel-inner img {
-      width: 37.5rem;
-      height: 15rem; } }
-
 .nav2 {
   background-color: #ffd3ca;
-  padding: 0.5rem;
-  font-size: 1rem;
-  font-size: 1.5rem; }
-  .nav2 li {
-    list-style: none;
-    font-size: 1rem; }
-    @media (min-width: 768px) {
-      .nav2 li {
-        font-size: 1.5rem; } }
-  .nav2 ul {
-    padding-left: 0; }
-
-a {
-  font-size: 1rem;
-  text-decoration: none;
-  font-weight: bolder; }
-  a:hover {
-    color: #ff8173; }
-  @media (min-width: 768px) {
-    a {
-      font-size: 2rem; } }
+  padding: 0.5rem; }
 
 .estampadosNav2 {
   display: flex;
@@ -290,55 +226,60 @@ a {
   justify-content: space-evenly;
   align-items: flex-start; }
   .estampadosNav2 select {
-    font-size: 1.2rem; }
+    font-size: 1.1rem; }
   .estampadosNav2 label {
-    font-size: 1.2rem; }
+    font-size: 1.1rem; }
   .estampadosNav2 h3 {
-    font-size: 1.4rem;
-    padding: 0.625rem 0.625rem;
+    font-size: 1.2rem;
     display: flex; }
   @media (min-width: 768px) {
     .estampadosNav2 {
       justify-content: space-evenly;
       align-items: flex-start; }
       .estampadosNav2 h3 {
-        font-size: 1.6rem; }
+        font-size: 1.5rem; }
       .estampadosNav2 select {
-        font-size: 1.6rem;
+        font-size: 1.3rem;
         width: 100%; }
       .estampadosNav2 label {
-        font-size: 1.6rem; } }
+        font-size: 1.3rem; } }
   @media (min-width: 1024px) {
     .estampadosNav2 {
       display: flex;
       flex-direction: column;
       text-align: center;
       justify-content: flex-start;
-      padding-top: 2rem; }
+      padding-top: 2rem;
+      padding-left: 1rem; }
       .estampadosNav2 span {
         padding-top: 0.375rem; }
       .estampadosNav2 label {
-        font-size: 1.6rem; }
+        font-size: 1.4rem; }
       .estampadosNav2 div {
         padding-bottom: 1.5rem; } }
 
 .checkboxDiseños {
-  font-size: 1.4rem;
   display: flex;
   flex-direction: column;
   text-align: center;
   align-items: flex-start; }
-  @media (min-width: 1024px) {
+  @media (min-width: 768px) {
     .checkboxDiseños {
       display: flex;
       flex-direction: column;
       text-align: center; } }
 
+#productos h2 a {
+  font-size: 1.5rem;
+  text-decoration: none; }
+  @media (min-width: 768px) {
+    #productos h2 a {
+      font-size: 1.8rem; } }
+
 #aside {
   display: flex;
   flex-direction: column;
-  text-align: center;
-  justify-content: space-evenly; }
+  text-align: center; }
   @media (min-width: 768px) {
     #aside {
       display: flex;
@@ -350,7 +291,7 @@ a {
       flex-direction: column;
       text-align: center; } }
   #aside figcaption {
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: bolder;
     margin-top: 0.375rem;
     margin-bottom: 0.375rem; }
@@ -379,19 +320,19 @@ img {
     .card {
       width: 100%; } }
 
-.container-fluid {
+.catalogoProductos {
   margin: 0.25rem; }
-  .container-fluid h3 {
+  .catalogoProductos h3 {
     font-size: 1rem;
     color: #ff8173;
     font-style: italic;
     margin-top: -0.375rem;
     margin-bottom: -0.625rem; }
     @media (min-width: 768px) {
-      .container-fluid h3 {
+      .catalogoProductos h3 {
         font-size: 1.2rem;
         margin-bottom: 0.625rem; } }
-  .container-fluid article {
+  .catalogoProductos article {
     display: flex; }
 
 .card-body {
@@ -400,7 +341,6 @@ img {
   text-align: center;
   justify-content: space-around;
   width: 100%;
-  padding: -0.063rem 0.938rem;
   margin: 0; }
   .card-body h4 {
     padding-top: 0.625rem;
@@ -436,6 +376,69 @@ img {
   color: white;
   font-weight: bolder; }
 
+.galeria_disenios {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center; }
+  .galeria_disenios a {
+    font-size: 1.5rem;
+    text-decoration: none;
+    font-weight: bolder; }
+    .galeria_disenios a:hover {
+      color: #ff8173; }
+    @media (min-width: 768px) {
+      .galeria_disenios a {
+        font-size: 2rem; } }
+    @media (min-width: 1024px) {
+      .galeria_disenios a {
+        font-size: 2rem; } }
+  .galeria_disenios h2 {
+    font-size: 1.3rem;
+    padding-top: 0.625rem;
+    margin-bottom: -0.125rem; }
+    @media (min-width: 768px) {
+      .galeria_disenios h2 {
+        padding-left: 2rem;
+        padding-right: 2rem;
+        font-size: 1.8rem; } }
+    @media (min-width: 1024px) {
+      .galeria_disenios h2 {
+        font-size: 2.2rem; } }
+
+.encabezadoCarousel {
+  width: 69%;
+  font-size: 1.4rem;
+  font-weight: bolder;
+  margin-top: 0.625rem;
+  margin-bottom: 0;
+  background-color: #d9b6bd; }
+  @media (min-width: 768px) {
+    .encabezadoCarousel {
+      font-size: 1.8rem;
+      width: 67%;
+      margin-top: 1rem; } }
+  @media (min-width: 1024px) {
+    .encabezadoCarousel {
+      font-size: 2rem;
+      width: 71%;
+      margin-top: 2rem; } }
+
+.carousel {
+  width: 80%;
+  margin-bottom: 2rem; }
+  @media (min-width: 768px) {
+    .carousel {
+      margin-bottom: 4rem; } }
+
+.carousel-inner img {
+  width: 16.25rem;
+  height: 6.875rem; }
+  @media (min-width: 768px) {
+    .carousel-inner img {
+      width: 37.5rem;
+      height: 15rem; } }
+
 .sobreMi__article {
   display: flex;
   flex-direction: column;
@@ -469,34 +472,38 @@ img {
 
 span p {
   background-color: #ff8173;
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   font-weight: bolder;
   color: white;
   text-align: center;
-  margin: 1.25rem;
-  padding: 1.625rem; }
+  margin: 2.2rem;
+  padding: 0.625rem; }
   @media (min-width: 768px) {
     span p {
-      font-size: 1.8rem; } }
+      font-size: 1.8rem;
+      padding: 2.1rem; } }
   @media (min-width: 1024px) {
     span p {
-      margin: 0.625rem; } }
+      margin: 0.5rem;
+      padding: 1.5rem; } }
 
 .card-title {
   text-align: center;
   font-weight: bolder; }
 
 #preguntasFrecuentes article {
-  display: flex;
   padding-bottom: 1.25rem; }
 
-@media (min-width: 768px) {
-  .section_contacto {
-    margin: 1.875rem; } }
-
-@media (min-width: 1024px) {
-  .section_contacto {
-    margin: 0.75rem; } }
+.section_contacto {
+  padding-left: 2rem;
+  padding-right: 2rem; }
+  @media (min-width: 768px) {
+    .section_contacto {
+      margin: 1.875rem;
+      padding: 0.4rem; } }
+  @media (min-width: 1024px) {
+    .section_contacto {
+      margin: 0.75rem; } }
 
 #formularioContacto {
   padding-top: 0.625rem;
@@ -505,6 +512,9 @@ span p {
   text-align: center;
   font-size: 1.4rem;
   background-color: #d9b6bd; }
+
+.form-check {
+  margin-bottom: 1rem; }
 
 article {
   justify-content: center; }
