--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -1,88 +1,14 @@
-//Page "Index"
 .carousel-index {
+  @include flex(row, center);
   padding: 1.25rem;
   img {
     width: 100%;
   }
 }
 
-//Page "Diseños Disponibles"
-
-.galeria_disenios {
-  @include flex(column, center);
-  align-items: center;
-  a {
-    font-size: 1.5rem;
-    text-decoration: none;
-    font-weight: bolder;
-    &:hover {
-      color: map-get($map: $paleta, $key: "seis");
-    }
-  }
-  h2 {
-    padding-top: 0.625rem;
-    margin-bottom: -0.125rem;
-  }
-}
-
-.encabezadoCarousel {
-  width: 80%;
-  font-size: 1.4rem;
-  font-weight: bolder;
-  margin-top: 0.625rem;
-  margin-bottom: 0;
-  background-color: map-get($map: $paleta, $key: "cinco");
-  @media (min-width: 768px) {
-    font-size: 1.8rem;
-    width: 67%;
-  }
-  @media (min-width: 1024px) {
-    font-size: 2rem;
-    width: 72%;
-  }
-}
-
-.carousel {
-  width: 80%;
-  margin-bottom: 1.25rem;
-}
-
-.carousel-inner img {
-  width: 16.25rem;
-  height: 6.875rem;
-  @media (min-width: 768px) {
-    width: 37.5rem;
-    height: 15rem;
-  }
-}
-
-//Page "Productos"
 .nav2 {
   background-color: map-get($map: $paleta, $key: "tres");
   padding: 0.5rem;
-  font-size: 1rem;
-  font-size: 1.5rem;
-  li {
-    list-style: none;
-    font-size: 1rem;
-    @media (min-width: 768px) {
-      font-size: 1.5rem;
-    }
-  }
-  ul {
-    padding-left: 0;
-  }
-}
-a {
-  font-size: 1rem;
-  text-decoration: none;
-  font-weight: bolder;
-  &:hover {
-    color: map-get($map: $paleta, $key: "seis");
-  }
-  @media (min-width: 768px) {
-    font-size: 2rem;
-  }
 }
 
 .estampadosNav2 {
@@ -90,39 +16,39 @@ a {
   justify-content: space-evenly;
   align-items: flex-start;
   select {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
   }
   label {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
   }
   h3 {
-    font-size: 1.4rem;
-    padding: 0.625rem 0.625rem;
+    font-size: 1.2rem;
     display: flex;
   }
   @media (min-width: 768px) {
     justify-content: space-evenly;
     align-items: flex-start;
     h3 {
-      font-size: 1.6rem;
+      font-size: 1.5rem;
     }
     select {
-      font-size: 1.6rem;
+      font-size: 1.3rem;
       width: 100%;
     }
     label {
-      font-size: 1.6rem;
+      font-size: 1.3rem;
     }
   }
   @media (min-width: 1024px) {
     @include flex(column, center);
     justify-content: flex-start;
     padding-top: 2rem;
+    padding-left: 1rem;
     span {
       padding-top: 0.375rem;
     }
     label {
-      font-size: 1.6rem;
+      font-size: 1.4rem;
     }
     div {
       padding-bottom: 1.5rem;
@@ -131,17 +57,27 @@ a {
 }
 
 .checkboxDiseños {
-  font-size: 1.4rem;
   @include flex(column, center);
   align-items: flex-start;
-  @media (min-width: 1024px) {
+  @media (min-width: 768px) {
     @include flex(column, center);
+  }
+}
+
+#productos {
+  h2{
+    a{
+      font-size: 1.5rem;
+      text-decoration: none;
+      @media (min-width: 768px) {
+        font-size: 1.8rem;
+      }
+    }
   }
 }
 
 #aside {
   @include flex(column, center);
-  justify-content: space-evenly;
   @media (min-width: 768px) {
     @include flex(row, center);
   }
@@ -149,7 +85,7 @@ a {
     @include flex(column, center);
   }
   figcaption {
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: bolder;
     margin-top: 0.375rem;
     margin-bottom: 0.375rem;
@@ -181,7 +117,7 @@ img {
     width: 100%;
   }
 }
-.container-fluid {
+.catalogoProductos {
   margin: 0.25rem;
   h3 {
     font-size: 1rem;
@@ -203,7 +139,6 @@ img {
   @include flex(column, center);
   justify-content: space-around;
   width: 100%;
-  padding: -0.063rem 0.938rem;
   margin: 0;
   h4 {
     padding-top: 0.625rem;
@@ -245,7 +180,74 @@ img {
   color: map-get($map: $paleta, $key: "nueve");
   font-weight: bolder;
 }
-//Page "Sobre Mí"
+
+.galeria_disenios {
+  @include flex(column, center);
+  align-items: center;
+  a {
+    font-size: 1.5rem;
+    text-decoration: none;
+    font-weight: bolder;
+    &:hover {
+      color: map-get($map: $paleta, $key: "seis");
+    }
+    @media (min-width: 768px) {
+      font-size: 2rem;
+    }
+    @media (min-width: 1024px) {
+      font-size: 2rem;
+    }
+  }
+  h2 {
+    font-size: 1.3rem;
+    padding-top: 0.625rem;
+    margin-bottom: -0.125rem;
+    @media (min-width: 768px) {
+      padding-left: 2rem;
+      padding-right: 2rem;
+      font-size: 1.8rem;
+    }
+    @media (min-width: 1024px) {
+      font-size: 2.2rem;
+    }
+  }
+}
+
+.encabezadoCarousel {
+  width: 69%;
+  font-size: 1.4rem;
+  font-weight: bolder;
+  margin-top: 0.625rem;
+  margin-bottom: 0;
+  background-color: map-get($map: $paleta, $key: "cinco");
+  @media (min-width: 768px) {
+    font-size: 1.8rem;
+    width: 67%;
+    margin-top: 1rem;
+  }
+  @media (min-width: 1024px) {
+    font-size: 2rem;
+    width: 71%;
+    margin-top: 2rem;
+  }
+}
+
+.carousel {
+  width: 80%;
+  margin-bottom: 2rem;
+  @media (min-width: 768px) {
+    margin-bottom: 4rem;
+  }
+}
+
+.carousel-inner img {
+  width: 16.25rem;
+  height: 6.875rem;
+  @media (min-width: 768px) {
+    width: 37.5rem;
+    height: 15rem;
+  }
+}
 
 .sobreMi__article {
   @include flex(column, center);
@@ -280,21 +282,21 @@ img {
   }
 }
 
-// Page "Faqs&Contacto"
-
 span p {
   background-color: map-get($map: $paleta, $key: "seis");
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   font-weight: bolder;
   color: map-get($map: $paleta, $key: "nueve");
   text-align: center;
-  margin: 1.25rem;
-  padding: 1.625rem;
+  margin: 2.2rem;
+  padding: 0.625rem;
   @media (min-width: 768px) {
     font-size: 1.8rem;
+    padding: 2.1rem;
   }
   @media (min-width: 1024px) {
-    margin: 0.625rem;
+    margin: 0.5rem;
+    padding: 1.5rem;
   }
 }
 
@@ -305,14 +307,16 @@ span p {
 
 #preguntasFrecuentes {
   article {
-    display: flex;
     padding-bottom: 1.25rem;
   }
 }
 
 .section_contacto {
+  padding-left: 2rem;
+  padding-right: 2rem;
   @media (min-width: 768px) {
     margin: 1.875rem;
+    padding: 0.4rem;
   }
   @media (min-width: 1024px) {
     margin: 0.75rem;
@@ -324,6 +328,10 @@ span p {
   @include flex(column, center);
   font-size: 1.4rem;
   background-color: map-get($map: $paleta, $key: "cinco");
+}
+
+.form-check {
+  margin-bottom: 1rem;
 }
 
 article {
