--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -1,11 +1,10 @@
 .carousel-index {
   @include flex(column, center);
-  padding: 1.25rem;
   img {
     width: 85%;
     border-radius: 1.5rem;
     padding-top: 1rem;
-    margin-bottom: 0;
+    margin-bottom: 1rem;
     @media (min-width: 768px) {
       width: 65%;
     }
@@ -85,6 +84,15 @@
       }
     }
   }
+  h3 {
+    color: map-get($map: $paleta, $key: "seis");
+    font-style: italic;
+    margin-top: -0.375rem;
+    @media (min-width: 768px) {
+      font-size: 1.2rem;
+      margin-bottom: 0.625rem;
+    }
+  }
 }
 
 #aside {
@@ -119,24 +127,6 @@ img {
 .row {
   display: flex;
   justify-content: space-around;
-}
-
-.catalogoProductos {
-  margin: 0.25rem;
-  h3 {
-    font-size: 1rem;
-    color: map-get($map: $paleta, $key: "seis");
-    font-style: italic;
-    margin-top: -0.375rem;
-    margin-bottom: -0.625rem;
-    @media (min-width: 768px) {
-      font-size: 1.2rem;
-      margin-bottom: 0.625rem;
-    }
-  }
-  article {
-    display: flex;
-  }
 }
 
 .card {
@@ -207,7 +197,22 @@ img {
 .galeria_disenios {
   @include flex(column, center);
   align-items: center;
-  a {
+  h2 {
+    font-size: 1.2rem;
+    padding-top: 1rem;
+    padding-left: 0.3rem;
+    padding-right: 0.3rem;
+    margin-bottom: -0.625rem;
+    @media (min-width: 768px) {
+      padding-left: 2rem;
+      padding-right: 2rem;
+      font-size: 1.8rem;
+    }
+    @media (min-width: 1024px) {
+      font-size: 2.2rem;
+    }
+  }
+   a {
     font-size: 1.5rem;
     text-decoration: none;
     font-weight: bolder;
@@ -221,19 +226,7 @@ img {
       font-size: 2rem;
     }
   }
-  h2 {
-    font-size: 1.3rem;
-    padding-top: 0.625rem;
-    margin-bottom: -0.125rem;
-    @media (min-width: 768px) {
-      padding-left: 2rem;
-      padding-right: 2rem;
-      font-size: 1.8rem;
-    }
-    @media (min-width: 1024px) {
-      font-size: 2.2rem;
-    }
-  }
+ 
   .encabezadoCarousel {
     width: 69%;
     font-size: 1.4rem;
@@ -275,6 +268,9 @@ img {
   font-size: 1rem;
   background-color: map-get($map: $paleta, $key: "nueve");
   width: 80%;
+  @media (min-width: 1024px) {
+    width: 100%;
+  }
   height: auto;
   margin: 20px auto;
   border: dotted 0.375rem map-get($map: $paleta, $key: "cinco");
@@ -302,6 +298,9 @@ img {
     @media (min-width: 768px) {
       width: 50%;
     }
+  @media (min-width: 1024px) {
+    width: 55%;
+  }
   }
 }
 
@@ -381,9 +380,6 @@ img {
   margin-bottom: 1rem;
   article {
     justify-content: center;
-    h2 {
-      font-size: 2rem;
-    }
     form {
       @include flex(column, center);
       padding-top: 1rem;
