--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -36,7 +36,7 @@ $paleta: (
     cursor: pointer;
   }
   a {
-    font-size: 1rem;
+    font-size: 1.2rem;
     text-decoration: none;
     font-weight: bolder;
     color: map-get($map: $paleta, $key: "nueve");
@@ -53,6 +53,12 @@ $paleta: (
     background: red;
     color: black;
     cursor: pointer;
+  }
+  a {
+    font-size: 1.2rem;
+    text-decoration: none;
+    font-weight: bolder;
+    color: map-get($map: $paleta, $key: "nueve");
   }
 }
 
