--- a/scss/_navFooter.scss
+++ b/scss/_navFooter.scss
@@ -64,7 +64,7 @@
   }
 }
 
-.footer {
+#footer {
   background-color: map-get($map: $paleta, $key: "nueve");
   @include flex(row, center);
   justify-content: space-evenly;
@@ -80,19 +80,20 @@
       font-size: 1.4rem;
     }
   }
-}
-.footer__image {
-  width: 5rem;
-  padding-bottom: 1rem;
-  @media (min-width: 768px) {
-    width: 8rem;
+  .footer__image {
+    width: 5rem;
+    padding-bottom: 1rem;
+    @media (min-width: 768px) {
+      width: 7rem;
+    }
   }
-}
-.footer__icon {
-  width: 1.25rem;
-  margin-left: 0.25rem;
-  padding-top: -1.25rem;
-  @media (min-width: 768px) {
-    width: 1.875rem;
+  a {
+    text-decoration: none;
+  }
+  .footer__icon {
+    width: 2rem;
+    @media (min-width: 768px) {
+      width: 2.5rem;
+    }
   }
 }
